ACLOCAL_AMFLAGS = -I config

$(ac_aux_dir)/package.m4: $(top_srcdir)/configure.ac

EXTRA_DIST = bootstrap COPYING COPYING.LESSER CMakeLists.txt.in CMakeLists.txt

MAINTAINERCLEANFILES = Makefile.in aclocal.m4 configure config-h.in stamp-h.in config.cache config.h.in config.log config.status

# Process the following directories
SUBDIRS = config include src tests tools doc python
